# shindo-launcher

./: .gitignore  .npmrc  .prettierrc.cjs  AGENTS.MD  README.md  electrobun.config.ts  forge.config.js  index.html  llms.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.login.config.ts  vitest.config.ts
.github/workflows/: build.yml  commits.yml  release.yml  setup-tauri-signing.yml
scripts/: dev-electron.js  dev.js  dev.ts
src/: App.svelte  App.tsx  app.css  icons.ts  main.ts  router.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: client_update.rs  error.rs  java_mgr.rs  launcher_cfg.rs  main.rs  net_dl.rs  process.rs  progress_bus.rs  self_update.rs
src-tauri/src/mojang/: mod.rs
src/bun/: accounts.ts  git.ts  helper.ts  index.ts
src/components/: FeaturedBanner.vue  NavBar.svelte  Progress.tsx  ProgressBar.vue  ShellLog.vue  TitleBar.svelte
src/loginview/: App.svelte  index.html  main.ts  rpc.svelte.ts
src/loginview/public/: preload.js
src/mainview/: App.svelte  app.css  i18n.ts
src/mainview/components/: HomePage.svelte  LogsPage.svelte  SettingsPage.svelte  TitleBar.svelte  UpdatePage.svelte
src/mainview/pages/: HomePage.svelte  UpdatePage.svelte
src/mainview/services/: accounts.ts  launcher.ts  native.ts  persistence.ts  versioning.ts
src/mainview/state/: app.svelte.ts
src/pages/: HomePage.svelte  HomeScreen.tsx  SettingsPage.svelte  SettingsScreen.tsx  UpdatePage.svelte  UpdateScreen.tsx  helpers.ts
src/screens/: HomeScreen.vue  SettingsScreen.vue  UpdateScreen.vue
src/shared/: loginTypes.ts  types.ts
src/stores/: config.ts  logs.ts  progress.ts
src/types/: svelte-spa-router.d.ts
tests/mainview/: i18n.test.ts
tests/mainview/components/: TitleBar.test.ts
tests/mainview/pages/: LogsPage.test.ts  SettingsPage.test.ts  UpdatePage.test.ts
tests/mainview/services/: versioning.test.ts
tests/mainview/state/: app.test.ts
