[package]
name = "shindo-launcher"
version = "1.5.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate", "zstd", "http2"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
sha1 = "0.10"
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
