[package]
name = "shindo-launcher"
version = "1.5.0"
description = "Shindo Minecraft Launcher built with Tauri + Svelte"
authors = ["MikiDevAHM"]
license = "GPL-3.0"
repository = "https://github.com/ShindoClient/Shindo-Launcher"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
# UI library
tauri = { version = "^2", features = [] }
tauri-plugin-process = "^2"
tauri-plugin-dialog = "^2"
tauri-plugin-opener = "^2"
tauri-plugin-updater = "^2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
zip = "0.6"
flate2 = "1.0"
thiserror = "1"

# 🔹 Biblioteca de gerenciamento do Minecraft
rmcll = { path = "../RMCLL" }
