[package]
name = "shindo-launcher"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "process"] }
bytes = "1"
flate2 = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
semver = "1"
url = "2"
which = "6"
async-trait = "0.1"
parking_lot = "0.12"
dirs = "5"

git2 = { version = "0.18", default-features = false, features = ["https", "vendored-openssl"] }

# Tauri plugins
tauri-plugin-updater = "2"

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
